# isjsonschemasubset

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/isjsonschemasubset/: __init__.py
tests/: test_issubset.py  test_schema_versions.py
tests/schemas/Foo/: 0001.json
tests/schemas/test/: DateOnly.json  DateTimeOnly.json  EnumAB.json  EnumABC.json  EnumBC.json  IntNested.json  IntOnly.json  IntOrStrNested.json  StrAndDefault.json  StrNested.json  StrNoDefault.json  StrOnly.json  StrOrNone.json  StrOrNoneNested.json  UnionXY.json  UnionXYZ.json  UnionYZ.json
